feat: added media queries and grid styles

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,13 +1,11 @@
 .catalog {
-  display: flex;
-  flex-wrap: wrap;
-
-  max-width: 944px;
-  margin: 0 auto;
+  display: grid;
+  justify-content: center;
+  gap: 48px;
 
   &__card {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    justify-items: center;
     align-items: center;
     width: 200px;
     height: 300px;
@@ -18,5 +16,17 @@
 
   &__card:not(:nth-child(4n)) {
     margin-right: 48px;
+  }
+
+  @media(min-width: 488px) {
+    grid-template-columns: repeat(2, 200px);
+  }
+
+  @media(min-width: 768px) {
+    grid-template-columns: repeat(3, 200px);
+  }
+
+  @media(min-width: 1024px) {
+    grid-template-columns: repeat(4, 200px);
   }
 }
