--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@import "_variables.scss";
+
+@import "_header.scss";
+@import "_catalog.scss";
+
 html {
   font-family: Roboto, sans-serif;
 }
@@ -9,6 +14,3 @@ body {
 * {
   box-sizing: border-box;
 }
-
-@import "_header.scss";
-@import "_catalog.scss";
