--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,8 @@
 @import "_variables.scss";
 
+@import "_page.scss";
 @import "_header.scss";
 @import "_catalog.scss";
-
-html {
-  font-family: Roboto, sans-serif;
-}
-
-body {
-  margin: 0;
-}
 
 * {
   box-sizing: border-box;
